added download and index scripts to nb

--- a/notebooks/retrieve_gifs.ipynb
+++ b/notebooks/retrieve_gifs.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1cxLrHoLe2R2c5mxrXtn6zres-kEybnML\n",
+      "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/model/bertweet_weights.pth\n",
+      " 60%|███████████████████████▉                | 323M/541M [00:43<00:27, 7.86MB/s]"
+     ]
+    }
+   ],
+   "source": [
+    "!python3 ../scripts/gif_scripts/download_data.py\n",
+    "!python3 ../scripts/gif_scripts/build_indices.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -36,7 +57,6 @@
     }
    ],
    "source": [
-    "\n",
     "input_text = \"Hello! Nice to meet you!\"\n",
     "k = 5\n",
     "giphy_links = get_giphy_links(input_text, k=k)"
