added requirements to nb

--- a/notebooks/retrieve_gifs.ipynb
+++ b/notebooks/retrieve_gifs.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install -qq -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -12,7 +21,15 @@
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1cxLrHoLe2R2c5mxrXtn6zres-kEybnML\n",
       "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/model/bertweet_weights.pth\n",
-      " 60%|███████████████████████▉                | 323M/541M [00:43<00:27, 7.86MB/s]"
+      "100%|████████████████████████████████████████| 541M/541M [01:10<00:00, 7.63MB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=15jTsnN6cYIf2KBcJ85Km_xH2pjH8HILN\n",
+      "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/features/gif_id_to_feature.csv\n",
+      "100%|██████████████████████████████████████| 6.15M/6.15M [00:01<00:00, 5.65MB/s]\n",
+      "Downloading...\n",
+      "From: https://drive.google.com/uc?id=1OBEWu4RKkLciwtDnR0ecVqbjCPU9cVG7\n",
+      "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/features/gif_id_to_giphy_id.csv\n",
+      "100%|██████████████████████████████████████| 7.49M/7.49M [00:01<00:00, 5.25MB/s]\n"
      ]
     }
    ],
@@ -23,18 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/u_brixton/miniconda3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pepe_semantics.utils import visualize_giphy_gif\n",
     "from pepe_semantics.inference import get_giphy_links"
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
