installing full setup with requirements in nb

--- a/notebooks/retrieve_gifs.ipynb
+++ b/notebooks/retrieve_gifs.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m pip install -qq -r ../requirements.txt"
+    "!python -m pip install -qq ../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,15 +21,7 @@
       "Downloading...\n",
       "From: https://drive.google.com/uc?id=1cxLrHoLe2R2c5mxrXtn6zres-kEybnML\n",
       "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/model/bertweet_weights.pth\n",
-      "100%|████████████████████████████████████████| 541M/541M [01:10<00:00, 7.63MB/s]\n",
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=15jTsnN6cYIf2KBcJ85Km_xH2pjH8HILN\n",
-      "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/features/gif_id_to_feature.csv\n",
-      "100%|██████████████████████████████████████| 6.15M/6.15M [00:01<00:00, 5.65MB/s]\n",
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1OBEWu4RKkLciwtDnR0ecVqbjCPU9cVG7\n",
-      "To: /Users/u_brixton/miniconda3/lib/python3.9/site-packages/pepe_semantics/features/gif_id_to_giphy_id.csv\n",
-      "100%|██████████████████████████████████████| 7.49M/7.49M [00:01<00:00, 5.25MB/s]\n"
+      " 38%|███████████████▏                        | 205M/541M [00:22<00:30, 11.0MB/s]"
      ]
     }
    ],
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
